templates/hdfs-nn-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nn.hadoop.10.1.3.7.xip.io
    http:
      paths:
      - backend:
          serviceName: hadoop-hadoop-hdfs-nn
          servicePort: 50070
        path: /
