templates/yarn-rm-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: yarn-rm
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rm.hadoop.10.1.3.7.xip.io
    http:
      paths:
      - backend:
          serviceName: hadoop-hadoop-yarn-rm
          servicePort: 8088
        path: /
